Replace the Vendor folder with lib
This would be needed, since the vendor is used with different purpose in default theme.

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,9 @@
     	"htmlburger/carbon-validator": "^1.2",
     	"emohamed/carbon-config": "^0.1",
     	"emohamed/carbon-email-notification": "^0.1"
+    },
+    
+    "config": {
+        "vendor-dir": "lib"
     }
 }
